namespace Blazor.Core.Messaging
{
    public interface IMessage
    {
        // no member ( template type )
    }
}
